--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# PyCharm config files
+.idea/
+# macOS DS_STORE files
+*.DS_STORE
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
