--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,6 +27,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest setuptools
           pip install -r requirements.txt
+          pip install tensorboard transformers # required when testing model training
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
