--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,9 +25,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest setuptools
+          pip install flake8 pytest setuptools tensorboard  # last one required by tests
           pip install -r requirements.txt
-          pip install tensorboard transformers # required when testing model training
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
