--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest setuptools tensorboard  # last one required by tests
+          pip install flake8 pytest setuptools
           pip install -r requirements.txt
       - name: Lint with flake8
         run: |
